--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "slim/slim": "^3.8",
         "monolog/monolog": "^1.23",
         "illuminate/database": "^5.4",
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "phpmailer/phpmailer": "^6.0"
     },
     "authors": [
         {
